# playground

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  README.md
cmake/: create_lib.cmake  sqlite3.cmake
examples/: CMakeLists.txt
examples/ConfigApp/: Main.cpp
examples/DatabaseApp/: CMakeLists.txt  Main.cpp
examples/NotifierApp/: Main.cpp
examples/SignalApp/: Main.cpp
examples/StringLiteralApp/: Main.cpp
examples/ThreadSafeApp/: Main.cpp
include/: CMakeLists.txt
include/database/: BaseDAO.hpp  Dao.hpp  Handler.hpp  Interface.hpp  Types.hpp
include/database/tables/: Tag.hpp
include/event/: Listener.hpp  Notifier.hpp
include/logger/: Logger.hpp  Meta.hpp  Output.hpp  Timing.hpp
include/system/: SignalManager.hpp  Signals.hpp
include/types/: StringLiteral.hpp  Typename.hpp
scripts/: build  build.sh  dep
src/: CMakeLists.txt
src/database/: CMakeLists.txt  Handler.cpp
src/database/tables/: CMakeLists.txt  Tag.cpp
src/system/: CMakeLists.txt  SignalManager.cpp
src/types/: CMakeLists.txt  ThreadPool.cpp
