add_subdirectory(ConfigApp)
# add_subdirectory(DatabaseApp)
add_subdirectory(FilteringApp)
add_subdirectory(NotifierApp)
add_subdirectory(SingletonApp)
add_subdirectory(StringLiteralApp)
add_subdirectory(ThreadSafeApp)
add_subdirectory(SignalApp)
add_subdirectory(DisabledLoggerApp)
add_subdirectory(EnumStrApp)
add_subdirectory(TypenameApp)
add_subdirectory(BufferApp)

